--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<img>https://github.com/fixedline/fixedline.github.io/blob/main/aa.jpg</img><h1>Test</h1>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>The img element</h1>
+
+<img src="https://github.com/fixedline/fixedline.github.io/blob/main/aa.jpg" alt="Girl in a jacket" width="500" height="600">
+
+</body>
+</html>
